--- a/package.json
+++ b/package.json
@@ -1,24 +1,25 @@
 {
   "publisher": "antfu",
-  "name": "ext-name",
-  "displayName": "ext-name",
+  "name": "WomB0ComB0/vscode-ts-export",
+  "displayName": "WomB0ComB0/vscode-ts-export",
   "version": "0.0.0",
+  "type": "module",
   "private": true,
   "packageManager": "pnpm@10.4.1",
   "description": "",
-  "author": "Anthony Fu <anthonyfu117@hotmail.com>",
+  "author": "Mike Odnis <mike@mikeodnis.dev>",
   "license": "MIT",
-  "funding": "https://github.com/sponsors/antfu",
-  "homepage": "https://github.com/antfu/ext-name#readme",
+  "funding": "https://github.com/sponsors/WomB0ComB0",
+  "homepage": "https://github.com/WomB0ComB0/WomB0ComB0/vscode-ts-export#readme",
   "repository": {
     "type": "git",
-    "url": "https://github.com/antfu/ext-name"
+    "url": "https://github.com/WomB0ComB0/vscode-ts-export"
   },
   "bugs": {
-    "url": "https://github.com/antfu/ext-name/issues"
+    "url": "https://github.com/WomB0ComB0/vscode-ts-export/issues"
   },
   "sponsor": {
-    "url": "https://github.com/sponsors/antfu"
+    "url": "https://github.com/sponsors/WomB0ComB0"
   },
   "categories": [
     "Other"
@@ -40,7 +41,7 @@
     "commands": [],
     "configuration": {
       "type": "object",
-      "title": "ext-name",
+      "title": "WomB0ComB0/vscode-ts-export",
       "properties": {}
     }
   },
@@ -76,7 +77,10 @@
   },
   "pnpm": {
     "onlyBuiltDependencies": [
-      "esbuild"
+      "@vscode/vsce-sign",
+      "esbuild",
+      "keytar",
+      "rolldown"
     ]
   }
 }
