--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "publisher": "antfu",
+  "publisher": "WomB0ComB0",
   "name": "WomB0ComB0/vscode-ts-export",
   "displayName": "WomB0ComB0/vscode-ts-export",
   "version": "0.0.0",
